--- a/ipynbs/stock_screen.ipynb
+++ b/ipynbs/stock_screen.ipynb
@@ -9,8 +9,8 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "import numpy as np\n",
-    "from algo_trading.dataset import *\n",
-    "from algo_trading.analytics.metrics import *"
+    "from stock_screener.dataset import *\n",
+    "from stock_screener.metrics import *"
    ]
   },
   {
@@ -152,7 +152,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
+       "      <th>86</th>\n",
        "      <td>001500</td>\n",
        "      <td>30262</td>\n",
        "      <td>9150</td>\n",
@@ -170,45 +170,51 @@
        "      <td>23650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>843</th>\n",
+       "      <th>830</th>\n",
+       "      <td>009970</td>\n",
+       "      <td>113464</td>\n",
+       "      <td>33500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>848</th>\n",
        "      <td>003070</td>\n",
-       "      <td>33549</td>\n",
+       "      <td>34497</td>\n",
        "      <td>10200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1057</th>\n",
+       "      <th>1063</th>\n",
        "      <td>002870</td>\n",
        "      <td>5574</td>\n",
        "      <td>1755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1085</th>\n",
+       "      <th>1089</th>\n",
        "      <td>019180</td>\n",
        "      <td>9834</td>\n",
        "      <td>2635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1156</th>\n",
+       "      <th>1158</th>\n",
        "      <td>101330</td>\n",
        "      <td>19489</td>\n",
        "      <td>3435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1501</th>\n",
+       "      <th>1506</th>\n",
        "      <td>138930</td>\n",
-       "      <td>17885</td>\n",
+       "      <td>17949</td>\n",
        "      <td>5080</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1591</th>\n",
+       "      <th>1599</th>\n",
        "      <td>003530</td>\n",
        "      <td>5668</td>\n",
        "      <td>1750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1762</th>\n",
+       "      <th>1768</th>\n",
        "      <td>175330</td>\n",
-       "      <td>19486</td>\n",
+       "      <td>19751</td>\n",
        "      <td>4770</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -216,17 +222,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        종목코드   적정주가   현재주가\n",
-       "87    001500  30262   9150\n",
-       "229   005670  28207   5280\n",
-       "274   007340  80051  23650\n",
-       "843   003070  33549  10200\n",
-       "1057  002870   5574   1755\n",
-       "1085  019180   9834   2635\n",
-       "1156  101330  19489   3435\n",
-       "1501  138930  17885   5080\n",
-       "1591  003530   5668   1750\n",
-       "1762  175330  19486   4770"
+       "        종목코드    적정주가   현재주가\n",
+       "86    001500   30262   9150\n",
+       "229   005670   28207   5280\n",
+       "274   007340   80051  23650\n",
+       "830   009970  113464  33500\n",
+       "848   003070   34497  10200\n",
+       "1063  002870    5574   1755\n",
+       "1089  019180    9834   2635\n",
+       "1158  101330   19489   3435\n",
+       "1506  138930   17949   5080\n",
+       "1599  003530    5668   1750\n",
+       "1768  175330   19751   4770"
       ]
      },
      "execution_count": 9,
