--- a/ipynbs/stock_screen.ipynb
+++ b/ipynbs/stock_screen.ipynb
@@ -49,7 +49,7 @@
     "for stock_code, fin_data in financial_summary_data.items():\n",
     "    try:\n",
     "        if check_metric_increasing(fin_data['annual'], start_year=2017, end_year=2019,\n",
-    "                                   metric='ROE', should_be_positive=True):\n",
+    "                                   metric='영업이익', should_be_positive=True):\n",
     "            roe_increasing_stocks.append(stock_code)\n",
     "    except:\n",
     "        continue"
@@ -107,7 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "low_price_df = rim_df.loc[rim_df['적정주가'] > rim_df['현재주가'] * 3]"
+    "low_price_df = rim_df.loc[(rim_df['적정주가'] > rim_df['현재주가'] * 1.5) & \n",
+    "                          (rim_df['적정주가'] < rim_df['현재주가'] * 2)]"
    ]
   },
   {
@@ -152,88 +153,165 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>001500</td>\n",
-       "      <td>30262</td>\n",
-       "      <td>9150</td>\n",
+       "      <th>380</th>\n",
+       "      <td>038390</td>\n",
+       "      <td>27188</td>\n",
+       "      <td>14400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>229</th>\n",
-       "      <td>005670</td>\n",
-       "      <td>28207</td>\n",
-       "      <td>5280</td>\n",
+       "      <th>522</th>\n",
+       "      <td>001040</td>\n",
+       "      <td>166924</td>\n",
+       "      <td>83500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>274</th>\n",
-       "      <td>007340</td>\n",
-       "      <td>80051</td>\n",
-       "      <td>23650</td>\n",
+       "      <th>567</th>\n",
+       "      <td>016360</td>\n",
+       "      <td>48980</td>\n",
+       "      <td>32300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>830</th>\n",
-       "      <td>009970</td>\n",
-       "      <td>113464</td>\n",
-       "      <td>33500</td>\n",
+       "      <th>582</th>\n",
+       "      <td>183190</td>\n",
+       "      <td>86304</td>\n",
+       "      <td>55500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>848</th>\n",
+       "      <th>595</th>\n",
+       "      <td>145270</td>\n",
+       "      <td>1218</td>\n",
+       "      <td>761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>626</th>\n",
+       "      <td>122450</td>\n",
+       "      <td>18005</td>\n",
+       "      <td>9660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>039020</td>\n",
+       "      <td>5021</td>\n",
+       "      <td>2560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>024880</td>\n",
+       "      <td>7192</td>\n",
+       "      <td>3970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>763</th>\n",
+       "      <td>023760</td>\n",
+       "      <td>771</td>\n",
+       "      <td>510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>044450</td>\n",
+       "      <td>13211</td>\n",
+       "      <td>8270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785</th>\n",
+       "      <td>005940</td>\n",
+       "      <td>18131</td>\n",
+       "      <td>9450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>857</th>\n",
        "      <td>003070</td>\n",
        "      <td>34497</td>\n",
-       "      <td>10200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1063</th>\n",
-       "      <td>002870</td>\n",
-       "      <td>5574</td>\n",
-       "      <td>1755</td>\n",
+       "      <td>19000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1089</th>\n",
-       "      <td>019180</td>\n",
-       "      <td>9834</td>\n",
-       "      <td>2635</td>\n",
+       "      <td>023460</td>\n",
+       "      <td>2940</td>\n",
+       "      <td>1520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1158</th>\n",
-       "      <td>101330</td>\n",
-       "      <td>19489</td>\n",
-       "      <td>3435</td>\n",
+       "      <th>1207</th>\n",
+       "      <td>204270</td>\n",
+       "      <td>22867</td>\n",
+       "      <td>12100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1506</th>\n",
-       "      <td>138930</td>\n",
-       "      <td>17949</td>\n",
-       "      <td>5080</td>\n",
+       "      <th>1282</th>\n",
+       "      <td>268280</td>\n",
+       "      <td>169634</td>\n",
+       "      <td>88400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1599</th>\n",
-       "      <td>003530</td>\n",
-       "      <td>5668</td>\n",
-       "      <td>1750</td>\n",
+       "      <th>1317</th>\n",
+       "      <td>047050</td>\n",
+       "      <td>26555</td>\n",
+       "      <td>14100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1768</th>\n",
-       "      <td>175330</td>\n",
-       "      <td>19751</td>\n",
-       "      <td>4770</td>\n",
+       "      <th>1617</th>\n",
+       "      <td>267980</td>\n",
+       "      <td>104707</td>\n",
+       "      <td>68400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1739</th>\n",
+       "      <td>001460</td>\n",
+       "      <td>374656</td>\n",
+       "      <td>243000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1753</th>\n",
+       "      <td>084690</td>\n",
+       "      <td>17933</td>\n",
+       "      <td>11100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1784</th>\n",
+       "      <td>010050</td>\n",
+       "      <td>879</td>\n",
+       "      <td>543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1888</th>\n",
+       "      <td>036830</td>\n",
+       "      <td>80720</td>\n",
+       "      <td>47400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1898</th>\n",
+       "      <td>083930</td>\n",
+       "      <td>15579</td>\n",
+       "      <td>7840</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        종목코드    적정주가   현재주가\n",
-       "86    001500   30262   9150\n",
-       "229   005670   28207   5280\n",
-       "274   007340   80051  23650\n",
-       "830   009970  113464  33500\n",
-       "848   003070   34497  10200\n",
-       "1063  002870    5574   1755\n",
-       "1089  019180    9834   2635\n",
-       "1158  101330   19489   3435\n",
-       "1506  138930   17949   5080\n",
-       "1599  003530    5668   1750\n",
-       "1768  175330   19751   4770"
+       "        종목코드    적정주가    현재주가\n",
+       "380   038390   27188   14400\n",
+       "522   001040  166924   83500\n",
+       "567   016360   48980   32300\n",
+       "582   183190   86304   55500\n",
+       "595   145270    1218     761\n",
+       "626   122450   18005    9660\n",
+       "725   039020    5021    2560\n",
+       "741   024880    7192    3970\n",
+       "763   023760     771     510\n",
+       "778   044450   13211    8270\n",
+       "785   005940   18131    9450\n",
+       "857   003070   34497   19000\n",
+       "1089  023460    2940    1520\n",
+       "1207  204270   22867   12100\n",
+       "1282  268280  169634   88400\n",
+       "1317  047050   26555   14100\n",
+       "1617  267980  104707   68400\n",
+       "1739  001460  374656  243000\n",
+       "1753  084690   17933   11100\n",
+       "1784  010050     879     543\n",
+       "1888  036830   80720   47400\n",
+       "1898  083930   15579    7840"
       ]
      },
      "execution_count": 9,
