--- a/ipynbs/contrarian.ipynb
+++ b/ipynbs/contrarian.ipynb
@@ -104,6 +104,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 시장 PER 평균\n",
+    "per_mean['전체'] = per_pbr_divdend_data['PER'].mean()\n",
+    "\n",
+    "# 업종별 PER 평균\n",
+    "for k,v in sector_data.items():\n",
+    "    per_mean[sector_code_name[k]] = v['PER'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 시장 PER 평균\n",
+    "per_mean['전체'] = per_pbr_divdend_data['PER'].mean()\n",
+    "\n",
+    "# 업종별 PER 평균\n",
+    "for k,v in sector_data.items():\n",
+    "    per_mean[sector_code_name[k]] = v['PER'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
